# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint-check.yml  test-check.yml  tests-check.yml
gendiff/: __init__.py  arg_parser.py  cli.py  content.py  content_loader.py  data_loader.py  dicts_diff.py  diff_logic.py  formatter.py  generate_diff.py
gendiff/formatters/: json.py  plain.py  render_diff.py  stylish.py  visualize_diff.py
gendiff/scripts/: gendiff.py
tests/: test_diff_logic.py  test_gendiff.py  test_generate_diff.py
tests/fixtures/: expected_value_1.txt  json.txt  json_nested.txt
